[gd_scene load_steps=2 format=3 uid="uid://ns50i34klnpd"]

[ext_resource type="Script" uid="uid://ch8qh0mvcyapc" path="res://scripts/ui/mode_select_screen.gd" id="1"]

[node name="ModeSelectScreen" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="Panel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Select Difficulty"
horizontal_alignment = 1

[node name="EasyButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Easy"

[node name="MediumButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Medium"

[node name="HardButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Hard"

[node name="ObserveButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Observe (AI vs AI)"
